--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,13 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.logo-link {
+  display: flex;
 }
 
 .profile-image {
@@ -21,6 +28,13 @@ body {
   width: 48px;
   height: 48px;
 }
+
+.btn-profile {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
 
 .logo {
   color: rebeccapurple;
@@ -45,4 +59,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 12px;
 }
