--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,10 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
 }
 
 img {
@@ -10,6 +15,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.container-fruits {
+  display: flex;
+  align-items: center;
+  gap: 52px;
+}
+
+.container-fruits .fruits {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  text-align: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
