--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+  gap: 12px;
 }
 
 .icon {
@@ -33,6 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -64,3 +69,20 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+#text-box {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#text-box .sign {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+}
+
