--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,10 +4,13 @@ body, html {
 }
 
 .container {
+  display: grid;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  grid-template-columns: repeat(4,1fr);
+  gap: 15px;
 }
 
 .container div {
@@ -20,18 +23,22 @@ body, html {
 }
 
 .header {
+  grid-column: 1/ span 4;
   background-color: #FFDE22;
 }
 
 .sidebar {
+  grid-row: 2 / span 2;
   background-color: #FF7755;
 }
 
 .nav {
+  grid-column: 2 / span 3;
   background-color: #00DDFF;
 }
 
 .article {
+  grid-column: 2 / span 3;
   background-color: #bccbde;
 }
 
@@ -43,5 +50,6 @@ body, html {
 }
 
 .footer {
+  grid-column: 1/span 4;
   background-color: #393f4d;
 }
