--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
   text-align: center;
 }
 
@@ -16,16 +19,33 @@
 }
 
 .header {
+  grid-column: 1 / span 2;
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+
+.header .logo {
+  justify-self: start;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  justify-self: center;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2 / span 2;
+  display: grid;
+  row-gap: 50px;
 }
 
 .sidebar .photo {
@@ -44,6 +64,11 @@
   font-weight: normal;
 }
 
+.side-content, .photo {
+  display: grid;
+  align-items: center;
+} 
+
 .nav {
   background-color: #FF7755;
 }
@@ -51,10 +76,20 @@
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
+  
 }
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+} 
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -62,12 +97,14 @@
   font-family: sans-serif;
   color: white;
   text-align: left;
+  padding: 5px;
 }
 
 .article .card {
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,9 +120,11 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / span 2;
 }
 
 .footer p {
+  grid-column: 1 / span 2;
   font-size: 13px;
   font-weight: normal;  
 }
